# ioq3-autoupdater-test

./: CMakeLists.txt
.github/workflows/: build.yml
code/autoupdater/: autoupdater.c
